[package]
name = "grpc_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "chrono"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
prost-types = "0.12.3"
chrono = { version = "0.4.31"}
log = "0.4"
env_logger = "0.10"
pbjson-types = "0.6.0"
protos = { path = "./gen" }

[build-dependencies]
tonic-build = "0.10.2"

[workspace]
members = [
    "gen"
]